cmake_minimum_required(VERSION 3.28)
project(Dominion)

set(CMAKE_CXX_STANDARD 20)

add_executable(Dominion main.cpp
        Card.h
        GameCommand.cpp
        GameCommand.h
        TreasureCard.cpp
        TreasureCard.h
        VictoryCard.cpp
        VictoryCard.h
        KingdomCard.cpp
        KingdomCard.h
        Card.cpp
        Reserve.cpp
        Reserve.h
        Player.cpp
        Player.h
        GameCommand.cpp
        GameCommand.h
        Jeux.cpp
        Jeux.h
        Plateau.cpp
        Plateau.h
        GameCommand.cpp
        GameCommand.cpp
        GameCommand.cpp
        GameCommand.cpp
        GameCommand.cpp
)



